11-24-2024:
- Fixed a few link bugs.
- Fixed search again.
- Completed two demos.

11-21-2024:
- Fixed some bugs with links not working correctly.

11-18-2024:
- Minor blog re-arrangements.
- Cleaned up output for search.

9-16-2024:
- Added date feature to blog.

9-15-2024:
- Improved search screen UI.
- Added blog generation.
- Allowed sorting of blog posts by tag, topic and about-author
- Added reduced motion.
- Added light/dark mode based on OS.

9-14-2024:
- Removed Github button.
- Major CSS changes to desktop site.
- Started adding demo content.
- Minor modifications to styling of footer and sidebar to enable new functionality, such as displaying a sidebar with no collapsable navigation.
- Added photo to sidebar.
- Added the following sidebars: home
- Added tag generation.
- Added posts list.