@@ -114,16 +114,13 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container topnavlinks">
             <div class="navbar-header">
-              {% if site.navbar-toggle == true %}
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="fa fa-bars fa-2x"></span>
                 </button>
-                {% endif %}
-                {% if site.toggle-sidebar-button == true %}
-                <button type="button" class="navbar-toggle toggle-sidebar-button"  data-toggle="offcanvas" data-target=".sidebar-nav">
-                    <span class="sidebarToggle fa fa-columns fa-2x"></span>
+                
+                <button type="button" class="navbar-toggle toggle-sidebar-button" data-toggle="collapse" data-target=".mydocsidebar">
+                    <span class="sidebarToggle fa fa-book fa-2x"></span>
                 </button>
-                {% endif %}
 
 
                   {% include logo.html %}
