@@ -14,3 +14,16 @@
      }
 
 }
+
+@media (max-width: 766px)
+{
+
+    /* Sidebar stuff */
+    
+    #sidebar {
+	    width: 100%;
+        padding-bottom: 0px;
+        padding-top: 25px;
+    }
+
+}
